--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Splits smb-check-vulns into smb-vuln-conficker, smb-vuln-cve2009-3103,
+  smb-vuln-ms06-025, smb-vuln-ms07-029, smb-vuln-regsvc-dos and smb-vuln-ms08-067.
+  The scripts now support the library vulns and the script arguments "safe" and  
+  and "unsafe" were removed in favor of allowing users to control execution by 
+  NSE category. [Paulino Calderon] 
+
 o [NSE] bacnet-info.nse and s7-info.nse were added to the version category.
   [Paulino Calderon] 
 
