Adds missing github issue number to CHANGELOG entry
git-svn-id: https://svn.nmap.org/nmap@35296 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
-o [NSE] Splits smb-check-vulns into smb-vuln-conficker, smb-vuln-cve2009-3103,
+o [NSE] [GH#171] Splits smb-check-vulns into smb-vuln-conficker, smb-vuln-cve2009-3103,
   smb-vuln-ms06-025, smb-vuln-ms07-029, smb-vuln-regsvc-dos and smb-vuln-ms08-067.
   The scripts now support the library vulns and the script arguments "safe" and  
   and "unsafe" were removed in favor of allowing users to control execution by 
