Fix a typo in changlog (citrixlua -> citrix.lua) [ci skip]
git-svn-id: https://svn.nmap.org/nmap@35301 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -577,7 +577,7 @@ o [NSE] Fix some bugs which could cause snmp-ios-config and
   snmp-sysdescr scripts to crash
   (http://seclists.org/nmap-dev/2014/q2/120) [Patrik Karlsson]
 
-o [NSE] Improved performance of citrixlua library when handling large XML
+o [NSE] Improved performance of citrix.lua library when handling large XML
   responses containing application lists. [Tom Sellers]
 
 Nmap 6.45 [2014-04-11]
