--- a/HACKING
+++ b/HACKING
@@ -46,6 +46,9 @@ some ideas of contributions that might be particularly useful are listed in
 the todo file, available in todo/nmap.txt or online at
 https://svn.nmap.org/nmap/todo/nmap.txt
 
+o Bug reports and feature requests at http://issues.nmap.org/ are a good place
+  to look for ideas.
+
 o Script ideas page. Writing NSE scripts is an excellent way to contribute to
   the project. You can add your script ideas to our wiki page, or pick one and
   implement it. See: https://secwiki.org/w/Nmap_Script_Ideas
@@ -80,6 +83,8 @@ Then make a unified diff, by issuing the following command:
 
 If you've added several features, it's best to send them as several independent
 patches if you can.
+
+We also accept Github Pull Requests at https://github.org/nmap/nmap
 
 Style
 -----
