--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] [GH#229] Improve parsing in http.lua for multiple Set-Cookie headers in
+  a single response.  [nnposter]
+
 o [NSE] [GH#194] Add support for reading fragmented TLS messages to
   ssl-enum-ciphers. [Jacob Gajek]
 
