New script ip-https-discover http://seclists.org/nmap-dev/2015/q4/82
git-svn-id: https://svn.nmap.org/nmap@35376 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added ip-https-discover for detecting support for Microsoft's IP over
+  HTTPS tunneling protocol. [Niklaus Schiess]
+
 o [NSE] [GH#229] Improve parsing in http.lua for multiple Set-Cookie headers in
   a single response.  [nnposter]
 
