Add broadcast-sonicwall-discover. Closes #165
git-svn-id: https://svn.nmap.org/nmap@35423 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] [GH#165] Added broadcast-sonicwall-discover to detect and extract
+  information from SonicWall firewalls. [Raphael Hoegger]
+
 o [NSE] [GH#38] Added http-vuln-cve2014-8877 to check for and optionally
   exploit a vulnerability in CM Download Manager plugin for Wordpress.
   [Mariusz Ziulek]
