Add nje-node-brute. http://seclists.org/nmap-dev/2015/q4/117
git-svn-id: https://svn.nmap.org/nmap@35424 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added nje-node-brute to brute-force z/OS JES Network Job Entry node
+  names. [Soldier of Fortran]
+
 o [NSE] [GH#165] Added broadcast-sonicwall-discover to detect and extract
   information from SonicWall firewalls. [Raphael Hoegger]
 
